M3-107: Adding mac app icon to build